--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply from: '../codestyle/codestyle.gradle'
 
 android {
     compileSdkVersion 25
@@ -10,23 +11,49 @@ android {
         minSdkVersion 25
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+      debug {
+
+      }
+      release {
+          minifyEnabled false
+          proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:25.4.0'
-    testImplementation 'junit:junit:4.12'
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+  testImplementation 'junit:junit:4.12'
+  testCompile 'org.mockito:mockito-core:2.8.47'
+  testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+
+  androidTestCompile 'org.mockito:mockito-core:2.8.47'
+  androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+  androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    exclude group: 'com.android.support', module: 'support-annotations'
+  })
+
+  // kotlin
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+  // android support
+  implementation 'com.android.support:appcompat-v7:25.4.0'
+  implementation 'com.android.support:design:25.4.0'
+  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+  compile 'com.android.support:support-annotations:26.0.0-beta2'
+
+  // dependency injection
+  compile 'com.google.dagger:dagger:2.11'
+  annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+  provided 'javax.annotation:jsr250-api:1.0'
+  compile 'javax.inject:javax.inject:1'
+
+  // reactiveX
+  compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  compile 'io.reactivex.rxjava2:rxjava:2.1.0'
 }
