--- a/Android/App/app/src/main/AndroidManifest.xml
+++ b/Android/App/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".surveys.surveys.SurveysActivity"/>
+    <activity android:name=".surveys.surveys.SurveysActivity"
+              android:theme="@style/AppTheme.OverlapSystemBar">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
   </application>
 
 </manifest>
