--- a/Android/App/build.gradle
+++ b/Android/App/build.gradle
@@ -1,25 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.3'
-    repositories {
-        maven { url 'https://maven.google.com' }
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha5'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+  ext.kotlin_version = '1.1.3-2'
+  ext.anko_version = '0.10.1'
+  repositories {
+    maven { url 'https://maven.google.com' }
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:3.0.0-alpha6'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath 'com.google.gms:google-services:3.1.0'
+  }
 }
 
 allprojects {
-    repositories {
-        maven { url 'https://maven.google.com' }
-        jcenter()
-        mavenCentral()
-    }
+  repositories {
+    maven { url 'https://maven.google.com' }
+    jcenter()
+    mavenCentral()
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
 }
