--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -42,10 +42,13 @@ dependencies {
   implementation 'com.android.support.constraint:constraint-layout:1.0.2'
   implementation 'com.android.support:support-annotations:26.0.0-beta2'
   implementation 'com.google.android.gms:play-services-location:11.0.2'
+  // permissions
+  implementation 'me.zhanghai.android.effortlesspermissions:library:1.0.0'
   // reactiveX
   implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
   implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
   implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+  implementation 'com.patloew.rxlocation:rxlocation:1.0.3'
   // firebase libraries
   implementation 'com.google.firebase:firebase-auth:11.0.2'
   implementation 'com.google.firebase:firebase-database:11.0.2'
