--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -3,34 +3,45 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
-    defaultConfig {
-        applicationId "eu.mignot.pathogentracker"
-        minSdkVersion 25
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        debug {
+  compileSdkVersion 25
+  buildToolsVersion '25.0.2'
+  defaultConfig {
+    applicationId "eu.mignot.pathogentracker"
+    minSdkVersion 25
+    targetSdkVersion 25
+    versionCode 1
+    versionName "1.0.0"
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    multiDexEnabled true
+  }
+  buildTypes {
+    debug {
 
-        }
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    }
+  }
+  dexOptions {
+    preDexLibraries = false
+  }
 }
 
 dependencies {
   implementation fileTree(include: ['*.jar'], dir: 'libs')
   testImplementation 'junit:junit:4.12'
   testImplementation 'org.mockito:mockito-core:2.8.47'
+  testImplementation 'io.kotlintest:kotlintest:2.0.4'
   androidTestImplementation 'org.mockito:mockito-core:2.8.47'
+  androidTestImplementation 'io.kotlintest:kotlintest:2.0.4'
   androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
+    exclude group: 'com.android.support', module: 'appcompat-v7'
+    exclude group: 'com.android.support', module: 'support-v4'
+    exclude group: 'com.android.support', module: 'design'
+    exclude group: 'com.android.support', module: 'recyclerview-v7'
+    exclude group: 'com.google.android.gms', module: 'play-services-location'
   })
   // kotlin
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -39,8 +50,8 @@ dependencies {
   implementation 'com.android.support:appcompat-v7:25.4.0'
   implementation 'com.android.support:recyclerview-v7:25.4.0'
   implementation 'com.android.support:design:25.4.0'
-  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-  implementation 'com.android.support:support-annotations:26.0.0-beta2'
+//  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+  // play services
   implementation 'com.google.android.gms:play-services-location:11.0.2'
   // permissions
   implementation 'me.zhanghai.android.effortlesspermissions:library:1.0.0'
