--- a/Android/App/build.gradle
+++ b/Android/App/build.gradle
@@ -3,12 +3,15 @@
 buildscript {
   ext.kotlin_version = '1.1.3-2'
   ext.anko_version = '0.10.1'
+  ext.firebase_version = '11.0.4'
+  ext.android_support_version = '25.4.0'
+  ext.play_services_version = '11.0.4'
   repositories {
     maven { url 'https://maven.google.com' }
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.0-alpha8'
+    classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.google.gms:google-services:3.1.0'
   }
