AddHumanSurvey - activity, viewmodel, add to manifest
- StepAdapter

- StepFragment

Uses StepStone component

--- a/Android/App/app/src/main/AndroidManifest.xml
+++ b/Android/App/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
               android:parentActivityName=".MainActivity"
               android:screenOrientation="portrait"
               android:theme="@style/AppTheme.OverlapSystemBarVector"/>
+    <activity android:name=".surveys.addsurvey.human.AddHumanSurveyActivity"
+              android:parentActivityName=".MainActivity"
+              android:screenOrientation="portrait"/>
   </application>
 
 </manifest>
