--- a/Android/App/build.gradle
+++ b/Android/App/build.gradle
@@ -1,19 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.1.3-2'
+  ext.kotlin_version = '1.1.51'
   ext.anko_version = '0.10.1'
-  ext.firebase_version = '11.0.4'
+  ext.firebase_version = '11.4.2'
   ext.android_support_version = '25.4.0'
-  ext.play_services_version = '11.0.4'
+  ext.play_services_version = '11.4.2'
   repositories {
     maven { url 'https://maven.google.com' }
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
+    classpath 'com.android.tools.build:gradle:3.0.0-beta6'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.google.gms:google-services:3.1.0'
+    classpath 'io.realm:realm-gradle-plugin:3.5.0'
   }
 }
 
