--- a/Android/App/app/src/main/AndroidManifest.xml
+++ b/Android/App/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+  <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
   <uses-permission android:name="android.permission.CAMERA"/>
@@ -16,32 +17,64 @@
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round"
+    android:roundIcon="@mipmap/ic_launcher"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".MainActivity"
-              android:screenOrientation="portrait">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
+    <activity
+      android:name=".onboarding.OnBoarding"
+      android:label="@string/title_activity_onboarding"
+      android:theme="@style/AppTheme"
+      android:screenOrientation="portrait">
     </activity>
     <activity
       android:name=".surveys.surveys.SurveysActivity"
       android:screenOrientation="portrait"
       android:theme="@style/AppTheme.OverlapSystemBar">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
     </activity>
-    <activity android:name=".surveys.addsurvey.vector.AddVectorBatchSurveyActivity"
-              android:parentActivityName=".MainActivity"
-              android:screenOrientation="portrait"
-              android:theme="@style/AppTheme.OverlapSystemBarVector"/>
-    <activity android:name=".surveys.addsurvey.vector.AddVectorSurveyActivity"
-              android:parentActivityName=".MainActivity"
-              android:screenOrientation="portrait"
-              android:theme="@style/AppTheme.OverlapSystemBarVector"/>
-    <activity android:name=".surveys.addsurvey.human.AddHumanSurveyActivity"
-              android:parentActivityName=".MainActivity"
-              android:screenOrientation="portrait"/>
+    <activity
+      android:name=".surveys.addsurvey.human.AddHumanSurveyActivity"
+      android:parentActivityName=".surveys.surveys.SurveysActivity"
+      android:screenOrientation="portrait"/>
+    <activity
+      android:name=".surveys.addsurvey.vector.AddVectorBatchSurveyActivity"
+      android:parentActivityName=".surveys.surveys.SurveysActivity"
+      android:screenOrientation="portrait"
+      android:theme="@style/AppTheme.OverlapSystemBarVector"/>
+    <activity
+      android:name=".surveys.addsurvey.vector.AddVectorSurveyActivity"
+      android:parentActivityName=".surveys.addsurvey.vector.AddVectorBatchSurveyActivity"
+      android:screenOrientation="portrait"
+      android:theme="@style/AppTheme.OverlapSystemBarVector"/>
+    <activity
+      android:name=".surveys.surveydetail.VectorBatchDetailActivity"
+      android:parentActivityName=".surveys.surveys.SurveysActivity"
+      android:screenOrientation="portrait"
+      android:theme="@style/AppTheme.OverlapSystemBarVector"/>
+    <activity
+      android:name=".surveys.surveydetail.HumanDetailActivity"
+      android:parentActivityName=".surveys.surveys.SurveysActivity"
+      android:screenOrientation="portrait"
+      android:theme="@style/AppTheme.OverlapSystemBar"/>
+    <activity
+      android:name=".surveys.surveydetail.VectorDetailActivity"
+      android:parentActivityName=".surveys.surveydetail.VectorBatchDetailActivity"
+      android:screenOrientation="portrait"
+      android:theme="@style/AppTheme.OverlapSystemBarVector"/>
+
+    <provider
+      android:name="android.support.v4.content.FileProvider"
+      android:authorities="eu.mignot.pathogentracker.fileprovider"
+      android:exported="false"
+      android:grantUriPermissions="true">
+      <meta-data
+        android:name="android.support.FILE_PROVIDER_PATHS"
+        android:resource="@xml/file_paths"/>
+    </provider>
   </application>
 
 </manifest>
