--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-v4'
         exclude group: 'com.android.support', module: 'design'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
+        exclude group: 'com.android.support', module: 'preference-v7'
         exclude group: 'com.google.android.gms', module: 'play-services-location'
     })
     // kotlin
@@ -68,6 +69,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$android_support_version"
     implementation "com.android.support:recyclerview-v7:$android_support_version"
     implementation "com.android.support:design:$android_support_version"
+    implementation "com.android.support:preference-v7:$android_support_version"
     // play services
     implementation "com.google.android.gms:play-services-location:$play_services_version"
     // permissions
