--- a/Android/App/app/src/main/AndroidManifest.xml
+++ b/Android/App/app/src/main/AndroidManifest.xml
@@ -19,17 +19,15 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher"
     android:supportsRtl="true"
-    android:theme="@style/AppTheme">
+    android:theme="@style/AppTheme.OverlapSystemBar">
     <activity
       android:name=".onboarding.OnBoarding"
       android:label="@string/title_activity_onboarding"
-      android:theme="@style/AppTheme"
       android:screenOrientation="portrait">
     </activity>
     <activity
       android:name=".surveys.surveys.SurveysActivity"
-      android:screenOrientation="portrait"
-      android:theme="@style/AppTheme.OverlapSystemBar">
+      android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -58,13 +56,16 @@
     <activity
       android:name=".surveys.surveydetail.HumanDetailActivity"
       android:parentActivityName=".surveys.surveys.SurveysActivity"
-      android:screenOrientation="portrait"
-      android:theme="@style/AppTheme.OverlapSystemBar"/>
+      android:screenOrientation="portrait"/>
     <activity
       android:name=".surveys.surveydetail.VectorDetailActivity"
       android:parentActivityName=".surveys.surveydetail.VectorBatchDetailActivity"
       android:screenOrientation="portrait"
       android:theme="@style/AppTheme.OverlapSystemBarVector"/>
+    <activity
+      android:name=".preferences.AppPreferencesActivity"
+      android:parentActivityName=".surveys.surveys.SurveysActivity"
+      android:screenOrientation="portrait"/>
 
     <provider
       android:name="android.support.v4.content.FileProvider"
