--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -9,10 +9,10 @@ android {
     buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "eu.mignot.pathogentracker"
-        minSdkVersion 24
+        minSdkVersion 23
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "Beta-1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         resConfigs "auto"
