--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -6,15 +6,14 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "eu.mignot.pathogentracker"
         minSdkVersion 23
         targetSdkVersion 25
         versionCode 2
-        versionName "Beta-1.1.0"
+        versionName "Beta-1.3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
+        multiDexEnabled false
         resConfigs "auto"
     }
     buildTypes {
@@ -37,7 +36,7 @@ android {
 // enable @ParametersAreNonnullByDefault annotation. See https://blog.jetbrains.com/kotlin/2017/08/kotlin-1-1-4-is-out/
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305-annotations=enable"]
+        freeCompilerArgs = ["-Xjsr305=strict"]
     }
 }
 
