--- a/Android/App/app/src/main/AndroidManifest.xml
+++ b/Android/App/app/src/main/AndroidManifest.xml
@@ -30,14 +30,14 @@
       android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
-
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
     <activity
       android:name=".surveys.addsurvey.human.AddHumanSurveyActivity"
       android:parentActivityName=".surveys.surveys.SurveysActivity"
-      android:screenOrientation="portrait"/>
+      android:screenOrientation="portrait"
+      android:theme="@style/AppTheme.OverlapSystemBar"/>
     <activity
       android:name=".surveys.addsurvey.vector.AddVectorBatchSurveyActivity"
       android:parentActivityName=".surveys.surveys.SurveysActivity"
@@ -56,7 +56,8 @@
     <activity
       android:name=".surveys.surveydetail.HumanDetailActivity"
       android:parentActivityName=".surveys.surveys.SurveysActivity"
-      android:screenOrientation="portrait"/>
+      android:screenOrientation="portrait"
+      android:theme="@style/AppTheme.OverlapSystemBar"/>
     <activity
       android:name=".surveys.surveydetail.VectorDetailActivity"
       android:parentActivityName=".surveys.surveydetail.VectorBatchDetailActivity"
@@ -65,7 +66,8 @@
     <activity
       android:name=".preferences.AppPreferencesActivity"
       android:parentActivityName=".surveys.surveys.SurveysActivity"
-      android:screenOrientation="portrait"/>
+      android:screenOrientation="portrait"
+      android:theme="@style/AppTheme.OverlapSystemBar"/>
 
     <provider
       android:name="android.support.v4.content.FileProvider"
