--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -5,16 +5,16 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 27
     defaultConfig {
         applicationId "eu.mignot.pathogentracker"
         minSdkVersion 23
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 2
-        versionName "Beta-1.3.0"
+        versionName "Beta-1.4.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled false
-        resConfigs "auto"
+        resConfigs "en"
     }
     buildTypes {
         debug {
@@ -42,7 +42,7 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.8.47'
     testImplementation 'io.kotlintest:kotlintest:2.0.4'
@@ -56,6 +56,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'recyclerview-v7'
         exclude group: 'com.android.support', module: 'preference-v7'
         exclude group: 'com.google.android.gms', module: 'play-services-location'
+        exclude group: 'com.google.android.gms', module: 'play-services-auth'
     })
     // kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -70,7 +71,8 @@ dependencies {
     implementation "com.android.support:design:$android_support_version"
     implementation "com.android.support:preference-v7:$android_support_version"
     // play services
-    implementation "com.google.android.gms:play-services-location:$play_services_version"
+    implementation "com.google.android.gms:play-services-location:15.0.1"
+    implementation "com.google.android.gms:play-services-auth:16.0.0"
     // permissions
     implementation 'me.zhanghai.android.effortlesspermissions:library:1.0.0'
     // reactiveX
@@ -79,23 +81,28 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     implementation 'com.patloew.rxlocation:rxlocation:1.0.3'
     // firebase libraries
-    implementation "com.google.firebase:firebase-auth:$firebase_version"
-    implementation "com.google.firebase:firebase-database:$firebase_version"
-    implementation "com.google.firebase:firebase-storage:$firebase_version"
-    implementation "com.google.firebase:firebase-config:$firebase_version"
-    implementation "com.google.firebase:firebase-crash:$firebase_version"
+    implementation "com.google.firebase:firebase-core:16.0.1"
+    implementation "com.google.firebase:firebase-auth:16.0.3"
+    implementation "com.google.firebase:firebase-database:16.0.1"
+    implementation "com.google.firebase:firebase-firestore:17.1.0"
+    implementation "com.google.firebase:firebase-storage:16.0.1"
+    implementation "com.google.firebase:firebase-config:16.0.0"
+    implementation "com.google.firebase:firebase-crash:16.0.1"
+    implementation "com.firebaseui:firebase-ui-auth:4.1.0"
     // other tools
     implementation 'com.stepstone.stepper:material-stepper:3.3.0'
     // realm extensions for kotlin
-    implementation 'com.github.vicpinm:krealmextensions:1.1.5'
-    implementation 'com.github.vicpinm:krealmextensions-rxjava:1.1.5'
-    implementation 'com.github.vicpinm:krealmextensions-rxjava2:1.1.5'
+    implementation 'com.github.vicpinm:krealmextensions:2.2.0'
 }
 
 kotlin {
     experimental {
         coroutines "enable"
     }
+}
+
+kapt {
+  mapDiagnosticLocations = true
 }
 
 apply plugin: 'com.google.gms.google-services'
