--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
         exclude group: 'com.google.android.gms', module: 'play-services-location'
         exclude group: 'com.google.android.gms', module: 'play-services-auth'
     })
-    // kotlin
+    // kotlin and anko
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
     implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
