--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -75,20 +75,18 @@ dependencies {
     implementation "com.google.android.gms:play-services-auth:16.0.0"
     // permissions
     implementation 'me.zhanghai.android.effortlesspermissions:library:1.0.0'
-    // reactiveX
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
-    implementation 'com.patloew.rxlocation:rxlocation:1.0.3'
+    // location
+    implementation 'com.github.yayaa:LocationManager:2.0.4'
     // firebase libraries
-    implementation "com.google.firebase:firebase-core:16.0.1"
+    implementation "com.google.firebase:firebase-core:16.0.3"
     implementation "com.google.firebase:firebase-auth:16.0.3"
     implementation "com.google.firebase:firebase-database:16.0.1"
     implementation "com.google.firebase:firebase-firestore:17.1.0"
     implementation "com.google.firebase:firebase-storage:16.0.1"
     implementation "com.google.firebase:firebase-config:16.0.0"
-    implementation "com.google.firebase:firebase-crash:16.0.1"
+    implementation "com.google.firebase:firebase-crash:16.2.0"
     implementation "com.firebaseui:firebase-ui-auth:4.1.0"
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
     // other tools
     implementation 'com.stepstone.stepper:material-stepper:3.3.0'
     // realm extensions for kotlin
