--- a/Android/App/build.gradle
+++ b/Android/App/build.gradle
@@ -1,32 +1,51 @@
 buildscript {
-  ext.kotlin_version = '1.2.30'
-  ext.anko_version = '0.10.5'
-  ext.android_support_version = '27.1.1'
+  ext {
+    kotlinVersion = "1.2.60"
+    ankoVersion = "0.10.5"
+    supportLibVersion = "27.1.1"
+    constraintLayoutVersion = "1.1.2"
+    playLocationVersion = "15.0.1"
+    playAuthVersion = "16.0.0"
+    fbCoreVersion = "16.0.3"
+    fbAuthVersion = "16.0.3"
+    fbFirestoreVersion = "17.1.0"
+    fbStorageVersion = "16.0.1"
+    fbCrashVersion = "16.2.0"
+    fbUIAuthVersion = "4.1.0"
+
+    kRealmExtVersion = "2.2.0"
+    effPermVersion = "1.0.0"
+    locManVersion = "2.0.4"
+    stepperVersion = "3.3.0"
+
+    junitVersion = "4.12"
+    mockitoVersion = "1.10.19"
+    hamcrestVersion = "1.3"
+    runnerVersion = "0.5"
+    rulesVersion = "0.5"
+    espressoVersion = "2.2.2"
+    uiautomatorVersion = "2.1.2"
+  }
   repositories {
+    maven { url "maven.google.com" }
     google()
     jcenter()
-    maven { url 'https://maven.google.com' }
-    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-    maven { url 'https://dl.bintray.com/kotlin/kotlin-dev' }
-    maven { url 'https://jitpack.io' }
+    maven { url "https://jitpack.io" }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.2.0-alpha15'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    classpath 'com.google.gms:google-services:4.0.1'
-    classpath 'io.realm:realm-gradle-plugin:5.4.2'
+    classpath "com.android.tools.build:gradle:3.1.4"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    classpath "com.google.gms:google-services:4.0.1"
+    classpath "io.realm:realm-gradle-plugin:5.4.2"
   }
 }
 
 allprojects {
   repositories {
+    maven { url "maven.google.com" }
     google()
     jcenter()
-    maven { url 'https://maven.google.com' }
-    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-    maven { url 'https://dl.bintray.com/kotlin/kotlin-dev' }
-    maven { url 'https://jitpack.io' }
-    mavenCentral()
+    maven { url "https://jitpack.io" }
   }
 }
 
