--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -24,7 +24,7 @@ android {
       testCoverageEnabled = true
     }
     release {
-      minifyEnabled true
+      minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
