--- a/Android/App/app/build.gradle
+++ b/Android/App/app/build.gradle
@@ -98,13 +98,20 @@ dependencies {
   // Testing
   testImplementation "junit:junit:$rootProject.ext.junitVersion"
   testImplementation "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
-  testImplementation "org.hamcrest:hamcrest-all:$rootProject.ext.hamcrestVersion"
   androidTestImplementation "com.android.support.test:runner:$rootProject.ext.runnerVersion"
   androidTestImplementation "com.android.support.test:rules:$rootProject.ext.rulesVersion"
   androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoVersion"
-  androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$rootProject.ext.espressoVersion"
+  androidTestImplementation ("com.android.support.test.espresso:espresso-contrib:$rootProject.ext.espressoVersion") {
+    exclude module: 'support-annotations'
+    exclude group: 'com.android.support', module: 'appcompat'
+    exclude group: 'com.android.support', module: 'support-v4'
+    exclude group: 'com.android.support', module: 'design'
+    exclude group: 'com.android.support', module: 'recyclerview-v7'
+    exclude group: 'com.android.support', module: 'preference-v7'
+    exclude group: 'com.android.constraint', module: 'constraint-layout'
+  }
   androidTestImplementation "com.android.support.test.espresso:espresso-intents:$rootProject.ext.espressoVersion"
-  androidTestImplementation "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
+  androidTestImplementation "org.mockito:mockito-android:$rootProject.ext.mockitoAndroidVersion"
 
   // UIAutomator Testing. Learn about this dependency in this projects README file.
   androidTestImplementation "com.android.support.test.uiautomator:uiautomator-v18:$rootProject.ext.uiautomatorVersion"
