--- a/Android/App/build.gradle
+++ b/Android/App/build.gradle
@@ -20,6 +20,7 @@ buildscript {
 
     junitVersion = "4.12"
     mockitoVersion = "1.10.19"
+    mockitoAndroidVersion = "2.22.0"
     hamcrestVersion = "1.3"
     runnerVersion = "0.5"
     rulesVersion = "0.5"
