--- a/Android/App/build.gradle
+++ b/Android/App/build.gradle
@@ -21,10 +21,11 @@ buildscript {
     junitVersion = "4.12"
     mockitoVersion = "1.10.19"
     mockitoAndroidVersion = "2.22.0"
+    mockKVersion = "1.8.7"
     hamcrestVersion = "1.3"
-    runnerVersion = "0.5"
-    rulesVersion = "0.5"
-    espressoVersion = "2.2.2"
+    runnerVersion = "1.0.0"
+    rulesVersion = "1.0.0"
+    espressoVersion = "3.0.2"
     uiautomatorVersion = "2.1.2"
   }
   repositories {
